--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>DESIGN AND IMPLEMENTATION OF PORTABLE SOIL FERTILITY TESTING DEVICE</title>
-	<title class="ti">Crop Fertilizer Calculator</title>
+	<h1 class="name">DESIGN AND IMPLEMENTATION OF PORTABLE SOIL FERTILITY TESTING DEVICE</h1>
+	<title>Crop Fertilizer Calculator</title>
 	<style>
 		label {
 			display: block;
@@ -26,17 +26,23 @@
 			margin-top: 20px;
 			font-size: 15px;
 		}
-        body {
+        html {
             font-family: Arial, Helvetica, sans-serif;
-            margin-left: 20%;
+            margin-left: 10%;
         }
+		.name {
+			font-size: 3em;
+			color: #343434;
+		}
 		.ti {
-			font-size: 20px;
+			font-size: 1.2em;
+			margin-bottom: 5%;
+			color: #33e614;
 		}
 	</style>
 </head>
 <body>
-	<h1>Crop Fertilizer Calculator</h1>
+	<h1 class ="ti">Crop Fertilizer Calculator</h1>
 	<label for="crop-select">Select a crop:</label>
 	<select id="crop-select">
 		<option value="rice">Rice</option>
